{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 976,
  "lineage": "b223fc01-8f00-368d-32ca-de888a5bddce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bed61dbc520cfd1c",
            "domain": "vpc",
            "id": "eipalloc-0bed61dbc520cfd1c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-193-248-194.compute-1.amazonaws.com",
            "public_ip": "34.193.248.194",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-nat-eip-1",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-nat-eip-1",
              "Project": "Clixx Retail"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094fc1bbeca59d844",
            "domain": "vpc",
            "id": "eipalloc-094fc1bbeca59d844",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-234-163-146.compute-1.amazonaws.com",
            "public_ip": "3.234.163.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-nat-eip-2",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-nat-eip-2",
              "Project": "Clixx Retail"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e58b56aa4d64231b",
            "arn": "arn:aws:ec2:us-east-1:924305315126:instance/i-027606831cb7842cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "clixx-bastion-profile",
            "id": "i-027606831cb7842cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "stack_devops_dev_kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07765e9ee08b73142",
            "private_dns": "ip-10-0-0-212.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.212",
            "public_dns": "ec2-3-81-133-70.compute-1.amazonaws.com",
            "public_ip": "3.81.133.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:924305315126:key/eec015b6-426d-4f9a-8cd6-e685a7b2af34",
                "throughput": 125,
                "volume_id": "vol-06dde09e2ca616825",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f880b7d48ad89ae2",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "clixx-bastion-host",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "clixx-bastion-host",
              "Project": "Clixx Retail"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e23031127a7f24da"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.bastion_profile",
            "aws_iam_role.bastion_role",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e58b56aa4d64231b",
            "arn": "arn:aws:ec2:us-east-1:924305315126:instance/i-09766cfb48bd15ae6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "clixx-bastion-profile",
            "id": "i-09766cfb48bd15ae6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "stack_devops_dev_kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b9fefd70ed0d6ae8",
            "private_dns": "ip-10-0-2-172.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.172",
            "public_dns": "ec2-44-198-157-214.compute-1.amazonaws.com",
            "public_ip": "44.198.157.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:924305315126:key/eec015b6-426d-4f9a-8cd6-e685a7b2af34",
                "throughput": 125,
                "volume_id": "vol-032d7577ae3cb6e59",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ceb967bf88c837d8",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "clixx-bastion-secondary",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "clixx-bastion-secondary",
              "Project": "Clixx Retail"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e23031127a7f24da"
            ]
          },
          "dependencies": [
            "aws_db_instance.clixx_db",
            "aws_db_parameter_group.mysql80",
            "aws_db_snapshot_copy.clixx_snapshot_copy",
            "aws_db_subnet_group.clixx_db_subnet_group",
            "aws_iam_instance_profile.bastion_profile",
            "aws_iam_role.bastion_role",
            "aws_instance.bastion",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.ec2_sg",
            "aws_security_group.rds_sg",
            "aws_ssm_parameter.rds_endpoint",
            "aws_subnet.private_db",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:internet-gateway/igw-091fa7634608d9be6",
            "id": "igw-091fa7634608d9be6",
            "owner_id": "924305315126",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-igw",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-igw",
              "Project": "Clixx Retail"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "clixx_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:924305315126:loadbalancer/app/clixx-alb/583c63882603ffbf",
            "arn_suffix": "app/clixx-alb/583c63882603ffbf",
            "desync_mitigation_mode": "defensive",
            "dns_name": "clixx-alb-1940563691.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:924305315126:loadbalancer/app/clixx-alb/583c63882603ffbf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "clixx-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-061d7c0cfb7150cd5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ceb967bf88c837d8"
              },
              {
                "subnet_id": "subnet-0f880b7d48ad89ae2"
              }
            ],
            "subnets": [
              "subnet-0ceb967bf88c837d8",
              "subnet-0f880b7d48ad89ae2"
            ],
            "tags": {
              "CreatedBy": "Terraform",
              "ManagedBy": "Terraform",
              "Name": "clixx-alb",
              "Project": "Clixx Retail",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "ManagedBy": "Terraform",
              "Name": "clixx-alb",
              "Project": "Clixx Retail",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "vpc_id": "vpc-026a6d22a73033461",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "clixx_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:924305315126:listener/app/clixx-alb/583c63882603ffbf/716cf51f8b1e6c91",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:924305315126:targetgroup/clixx-target-group/a56e136d5b39a31e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:924305315126:listener/app/clixx-alb/583c63882603ffbf/716cf51f8b1e6c91",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:924305315126:loadbalancer/app/clixx-alb/583c63882603ffbf",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.clixx_alb",
            "aws_lb_target_group.clixx_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "clixx_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:924305315126:listener/app/clixx-alb/583c63882603ffbf/3728fadcfe723ff5",
            "certificate_arn": "arn:aws:acm:us-east-1:924305315126:certificate/359f0a6c-455b-4b1d-9b95-462ffd90a2b9",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:924305315126:targetgroup/clixx-target-group/a56e136d5b39a31e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:924305315126:listener/app/clixx-alb/583c63882603ffbf/3728fadcfe723ff5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:924305315126:loadbalancer/app/clixx-alb/583c63882603ffbf",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.clixx_alb",
            "aws_lb_target_group.clixx_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_acm_certificate.clixx_cert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "clixx_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:924305315126:targetgroup/clixx-target-group/a56e136d5b39a31e",
            "arn_suffix": "targetgroup/clixx-target-group/a56e136d5b39a31e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-499",
                "path": "/health.php",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:924305315126:targetgroup/clixx-target-group/a56e136d5b39a31e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "clixx-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "CreatedBy": "Terraform",
              "ManagedBy": "Terraform",
              "Name": "clixx-target-group",
              "Project": "Clixx Retail",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "ManagedBy": "Terraform",
              "Name": "clixx-target-group",
              "Project": "Clixx Retail",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bed61dbc520cfd1c",
            "association_id": "eipassoc-02eaf35d6937e3aee",
            "connectivity_type": "public",
            "id": "nat-00188b26939f37a65",
            "network_interface_id": "eni-02c32f5ab635c7852",
            "private_ip": "10.0.1.57",
            "public_ip": "34.193.248.194",
            "subnet_id": "subnet-0f880b7d48ad89ae2",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-nat-gateway-1",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-nat-gateway-1",
              "Project": "Clixx Retail"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094fc1bbeca59d844",
            "association_id": "eipassoc-0197c65d8a2e4f5ea",
            "connectivity_type": "public",
            "id": "nat-00d9fd727f4ba9145",
            "network_interface_id": "eni-0643680d8b53d3535",
            "private_ip": "10.0.2.216",
            "public_ip": "3.234.163.146",
            "subnet_id": "subnet-0ceb967bf88c837d8",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-nat-gateway-2",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-nat-gateway-2",
              "Project": "Clixx Retail"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:route-table/rtb-0959d0cf85fe959ce",
            "id": "rtb-0959d0cf85fe959ce",
            "owner_id": "924305315126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00188b26939f37a65",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-route-table-1",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-route-table-1",
              "Project": "Clixx Retail"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:route-table/rtb-0766d49c66a3403ed",
            "id": "rtb-0766d49c66a3403ed",
            "owner_id": "924305315126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00d9fd727f4ba9145",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-route-table-2",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-route-table-2",
              "Project": "Clixx Retail"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:route-table/rtb-08fb8bfead06f470a",
            "id": "rtb-08fb8bfead06f470a",
            "owner_id": "924305315126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-091fa7634608d9be6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-public-route-table",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-public-route-table",
              "Project": "Clixx Retail"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022706223719beb5d",
            "route_table_id": "rtb-0959d0cf85fe959ce",
            "subnet_id": "subnet-03366959dfe4f4a56"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053ddd6a1df40f3b6",
            "route_table_id": "rtb-0766d49c66a3403ed",
            "subnet_id": "subnet-0b1d1a42731d51bb4"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e83fe726bbc7473",
            "route_table_id": "rtb-0959d0cf85fe959ce",
            "subnet_id": "subnet-0674984273ad088aa"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_db",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9e11acfe0114d28",
            "route_table_id": "rtb-0766d49c66a3403ed",
            "subnet_id": "subnet-0f1a39e2d9ea2e573"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_db",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_java_app_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ac00d81453045a7",
            "route_table_id": "rtb-0959d0cf85fe959ce",
            "subnet_id": "subnet-0a476e72527c44866"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_java_app",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ba2dbb053420aed",
            "route_table_id": "rtb-0766d49c66a3403ed",
            "subnet_id": "subnet-03bec9ba2e0959990"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_java_app",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_java_db_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c522eeb2fe156c8c",
            "route_table_id": "rtb-0959d0cf85fe959ce",
            "subnet_id": "subnet-084937c04d59f078a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_java_db",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0376f664d7df00f94",
            "route_table_id": "rtb-0766d49c66a3403ed",
            "subnet_id": "subnet-0a39f9a03461f1958"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_java_db",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_oracle_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f21d13c95f540dc",
            "route_table_id": "rtb-0959d0cf85fe959ce",
            "subnet_id": "subnet-022eec6201efe9de0"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_oracle",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053a41e02400bb283",
            "route_table_id": "rtb-0766d49c66a3403ed",
            "subnet_id": "subnet-0afb565513a56bc94"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_oracle",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f1de1a77e5d6a23",
            "route_table_id": "rtb-08fb8bfead06f470a",
            "subnet_id": "subnet-0f880b7d48ad89ae2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a59d9c9e0fb8b039",
            "route_table_id": "rtb-08fb8bfead06f470a",
            "subnet_id": "subnet-0ceb967bf88c837d8"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:security-group/sg-061d7c0cfb7150cd5",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061d7c0cfb7150cd5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "clixx-alb-sg",
            "name_prefix": "",
            "owner_id": "924305315126",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "clixx-alb-sg",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "clixx-alb-sg",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:security-group/sg-0e23031127a7f24da",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e23031127a7f24da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access to bastion host",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access to bastion host",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access to bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "clixx-bastion-sg",
            "name_prefix": "",
            "owner_id": "924305315126",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "clixx-bastion-sg",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "clixx-bastion-sg",
              "Project": "Clixx Retail"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:security-group/sg-022f493b27a04afc7",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022f493b27a04afc7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-061d7c0cfb7150cd5"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-061d7c0cfb7150cd5"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e23031127a7f24da"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "clixx-ec2-sg",
            "name_prefix": "",
            "owner_id": "924305315126",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "clixx-ec2-sg",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "clixx-ec2-sg",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:security-group/sg-0019895b8ad03a05e",
            "description": "Security group for EFS Mount Targets",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0019895b8ad03a05e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "NFS from VPC CIDR",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "NFS from Bastion hosts",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e23031127a7f24da"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "NFS from EC2 instances",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-022f493b27a04afc7"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "clixx-efs-sg",
            "name_prefix": "",
            "owner_id": "924305315126",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "clixx-efs-sg",
              "Owner": "Richard.claye@gmail.com",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "clixx-efs-sg",
              "Owner": "Richard.claye@gmail.com",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "oracle_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:security-group/sg-043aa9c12f06d88fb",
            "description": "Security group for Oracle database EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043aa9c12f06d88fb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Oracle DB listener",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e23031127a7f24da"
                ],
                "self": false,
                "to_port": 1521
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e23031127a7f24da"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "clixx-oracle-instance-sg",
            "name_prefix": "",
            "owner_id": "924305315126",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "clixx-oracle-instance-sg",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "clixx-oracle-instance-sg",
              "Project": "Clixx Retail"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "oracle_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:security-group/sg-0acbdc8cbd5abbc08",
            "description": "Security group for Oracle database instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acbdc8cbd5abbc08",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Oracle DB from Bastion Host",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e23031127a7f24da"
                ],
                "self": false,
                "to_port": 1521
              },
              {
                "cidr_blocks": [],
                "description": "Oracle DB from EC2 instances",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-022f493b27a04afc7"
                ],
                "self": false,
                "to_port": 1521
              }
            ],
            "name": "clixx-oracle-sg",
            "name_prefix": "",
            "owner_id": "924305315126",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "clixx-oracle-sg",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "clixx-oracle-sg",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:security-group/sg-035ecbe79148610ea",
            "description": "Security group for RDS instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035ecbe79148610ea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from Bastion Host",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e23031127a7f24da"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "MySQL from EC2 instances",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-022f493b27a04afc7"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "clixx-rds-sg",
            "name_prefix": "",
            "owner_id": "924305315126",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "clixx-rds-sg",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "clixx-rds-sg",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow all TCP traffic between instances in this security group",
            "from_port": 0,
            "id": "sgrule-3143895620",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e23031127a7f24da",
            "security_group_rule_id": "sgr-09a448f787adca8d6",
            "self": false,
            "source_security_group_id": "sg-0e23031127a7f24da",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:subnet/subnet-03366959dfe4f4a56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03366959dfe4f4a56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924305315126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-app-subnet-1",
              "Project": "Clixx Retail",
              "Purpose": "ApplicationServers",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-app-subnet-1",
              "Project": "Clixx Retail",
              "Purpose": "ApplicationServers",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:subnet/subnet-0b1d1a42731d51bb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1d1a42731d51bb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924305315126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-app-subnet-2",
              "Project": "Clixx Retail",
              "Purpose": "ApplicationServers",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-app-subnet-2",
              "Project": "Clixx Retail",
              "Purpose": "ApplicationServers",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:subnet/subnet-0674984273ad088aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0674984273ad088aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924305315126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-db-subnet-1",
              "Project": "Clixx Retail",
              "Purpose": "RDSDatabase",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-db-subnet-1",
              "Project": "Clixx Retail",
              "Purpose": "RDSDatabase",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:subnet/subnet-0f1a39e2d9ea2e573",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1a39e2d9ea2e573",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924305315126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-db-subnet-2",
              "Project": "Clixx Retail",
              "Purpose": "RDSDatabase",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-db-subnet-2",
              "Project": "Clixx Retail",
              "Purpose": "RDSDatabase",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_java_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:subnet/subnet-0a476e72527c44866",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.27.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a476e72527c44866",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924305315126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-java-app-subnet-1",
              "Project": "Clixx Retail",
              "Purpose": "JavaApplicationServers",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-java-app-subnet-1",
              "Project": "Clixx Retail",
              "Purpose": "JavaApplicationServers",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:subnet/subnet-03bec9ba2e0959990",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.27.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bec9ba2e0959990",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924305315126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-java-app-subnet-2",
              "Project": "Clixx Retail",
              "Purpose": "JavaApplicationServers",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-java-app-subnet-2",
              "Project": "Clixx Retail",
              "Purpose": "JavaApplicationServers",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_java_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:subnet/subnet-084937c04d59f078a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.28.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084937c04d59f078a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924305315126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-java-db-subnet-1",
              "Project": "Clixx Retail",
              "Purpose": "JavaDatabase",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-java-db-subnet-1",
              "Project": "Clixx Retail",
              "Purpose": "JavaDatabase",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:subnet/subnet-0a39f9a03461f1958",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.28.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a39f9a03461f1958",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924305315126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-java-db-subnet-2",
              "Project": "Clixx Retail",
              "Purpose": "JavaDatabase",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-java-db-subnet-2",
              "Project": "Clixx Retail",
              "Purpose": "JavaDatabase",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_oracle",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:subnet/subnet-022eec6201efe9de0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.24.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022eec6201efe9de0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924305315126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-oracle-subnet-1",
              "Project": "Clixx Retail",
              "Purpose": "OracleDatabase",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-oracle-subnet-1",
              "Project": "Clixx Retail",
              "Purpose": "OracleDatabase",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:subnet/subnet-0afb565513a56bc94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.25.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afb565513a56bc94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924305315126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-oracle-subnet-2",
              "Project": "Clixx Retail",
              "Purpose": "OracleDatabase",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-oracle-subnet-2",
              "Project": "Clixx Retail",
              "Purpose": "OracleDatabase",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:subnet/subnet-0f880b7d48ad89ae2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f880b7d48ad89ae2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "924305315126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-public-subnet-1",
              "Project": "Clixx Retail",
              "Purpose": "LoadBalancer-Bastion",
              "Terraform": "true",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-public-subnet-1",
              "Project": "Clixx Retail",
              "Purpose": "LoadBalancer-Bastion",
              "Terraform": "true",
              "Tier": "public"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:subnet/subnet-0ceb967bf88c837d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ceb967bf88c837d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "924305315126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-public-subnet-2",
              "Project": "Clixx Retail",
              "Purpose": "LoadBalancer-Bastion",
              "Terraform": "true",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-public-subnet-2",
              "Project": "Clixx Retail",
              "Purpose": "LoadBalancer-Bastion",
              "Terraform": "true",
              "Tier": "public"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:vpc/vpc-026a6d22a73033461",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-068b9778318fac6f3",
            "default_route_table_id": "rtb-06f626ece276c8b29",
            "default_security_group_id": "sg-0faeaf9eb839cf397",
            "dhcp_options_id": "dopt-08a252ee69a69ce96",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-026a6d22a73033461",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06f626ece276c8b29",
            "owner_id": "924305315126",
            "tags": {
              "Architecture": "Enhanced 12-subnet design",
              "Environment": "prod",
              "Name": "clixx-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Architecture": "Enhanced 12-subnet design",
              "Environment": "prod",
              "Name": "clixx-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}